<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CrowdService Android</string>
    <string name="loading">Loading</string>
    <string name="create_agent">Create Agent</string>
    <string name="loading_template_list">Loading Template List</string>
    <string name="agent_name">Agent Name</string>
    <string name="login">Login</string>
    <string name="capacity">Capacity</string>
    <string name="worker">Worker</string>
    <string name="consumer">Consumer</string>
    <string name="no_task">No Tasks Yet</string>
    <string name="offer_price">Please offer the price for this task</string>
    <string name="no_template">No Templates Yet</string>
    <string name="logging_in">Logging in...</string>
    <string name="jade_fail">JADE Fail</string>
    <string name="submit">Submit</string>
    <string name="please_complete_task_form">Please complete this task form!</string>
    <string name="jade_ip">JADE Server IP</string>
    <string name="obr_ip">OBR IP</string>
    <string name="port">Port</string>
    <string-array name="switcher">
        <item>Consumer</item>
        <item>Worker</item>
    </string-array>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="back">Back</string>
    <string name="no_service_in_execution">No Service in Execution</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="offer">Offer Price</string>
    <string name="ignore">Ignore It</string>
    <string name="do_it">Do It</string>
    <string name="task_waiting">Waiting for Response</string>
    <string name="task_complete">Task Completed</string>
    <string name="time_up">Time is up!</string>
    <string name="time_estimated">Time Estimated:</string>
    <string name="cost_estimated">Cost Estimated:</string>
</resources>
