<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/agent_name"
                android:id="@+id/agent_name"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/capacity"
                android:id="@+id/capacity"/>
        <Button
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="doLogin"
                android:text="@string/login"/>
    </LinearLayout>
</RelativeLayout>