<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView android:id="@+id/task_description"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="20dp"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <edu.fudan.se.crowdservice.view.CountDownButton
                style="@style/HalfScreen"
                android:id="@+id/task_offer"
                android:text="@string/offer"/>

        <TextView style="@style/HalfScreen"
                  android:id="@+id/task_reward"
                  android:layout_gravity="center_vertical"
                />

        <RelativeLayout android:id="@+id/task_waiting"
                        style="@style/HalfScreen">
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_centerInParent="true">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:gravity="center"
                          android:text="@string/task_waiting"/>

                <ProgressBar android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:indeterminate="true"/>
            </LinearLayout>
        </RelativeLayout>

        <edu.fudan.se.crowdservice.view.CountDownButton
                style="@style/HalfScreen"
                android:id="@+id/task_do"
                android:text="@string/do_it"/>

        <TextView style="@style/HalfScreen"
                  android:id="@+id/task_state"
                  android:layout_gravity="center_vertical"/>

        <Button style="@style/HalfScreen"
                android:id="@+id/task_remove"
                android:text="@string/ignore"/>
    </LinearLayout>

</LinearLayout>