<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <LinearLayout android:id="@+id/user_input_view"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <EditText android:id="@+id/user_input"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="8"/>

        <Button android:id="@+id/user_input_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/submit"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/user_confirm_view"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <Button android:id="@+id/user_confirm_yes"
                android:layout_width="0dp"
                android:text="@string/yes"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        <Button android:id="@+id/user_confirm_no"
                android:text="@string/no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/user_choose_view"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <Spinner android:id="@+id/user_choose"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="8"/>

        <Button android:id="@+id/user_choose_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/submit"/>
    </LinearLayout>
</LinearLayout>