<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <RelativeLayout android:id="@+id/list_consumer_session_footer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true">
        <LinearLayout android:id="@+id/user_input_view"
                      android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <EditText android:id="@+id/user_input"
                      android:layout_width="0dp"
                      android:focusable="true"
                      android:layout_height="wrap_content"
                      android:singleLine="true"
                      android:layout_weight="1"/>

            <Button android:id="@+id/user_input_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/user_confirm_view"
                      android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <Button android:id="@+id/user_confirm_yes"
                    android:layout_width="0dp"
                    android:text="@string/yes"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <Button android:id="@+id/user_confirm_no"
                    android:text="@string/no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/user_choose_view"
                      android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <Spinner android:id="@+id/user_choose"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"/>

            <Button android:id="@+id/user_choose_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"/>
        </LinearLayout>
    </RelativeLayout>

    <FrameLayout android:id="@+id/listContainer"
                 android:layout_width="match_parent"
                 android:layout_above="@id/list_consumer_session_footer"
                 android:layout_height="match_parent">

        <ListView android:id="@android:id/list"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:divider="@null"
                  android:dividerHeight="0dp"
                  android:transcriptMode="alwaysScroll"/>

        <TextView android:id="@android:id/empty"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center"
                  android:textAppearance="?android:attr/textAppearanceLarge"/>
    </FrameLayout>

</RelativeLayout>